Updating model.html

--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,33 +28,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     Name  Salary (SAR)  Age    State     Sex  Monthly Debt (SAR)  \\\n",
-      "0  faisal          2447   27  Married  Female              509.27   \n",
-      "1    Yara          3093   18   Single  Female              826.77   \n",
-      "2   bader           978   49  Married    Male              222.84   \n",
-      "3   Rawan          1187   59   Single    Male              255.64   \n",
-      "4   turki         13014   25   Single  Female             3536.82   \n",
+      "    Name  Salary (SAR)  Age    State     Sex  Monthly Debt (SAR)  \\\n",
+      "0   saif          4833   23   Single  Female               83.88   \n",
+      "1  Aisha          3894   23   Single    Male              491.46   \n",
+      "2   Nada          2355   55  Married    Male              667.27   \n",
+      "3    Ali          3521   21   Single  Female              370.20   \n",
+      "4   Mona          3068   25   Single    Male              434.68   \n",
       "\n",
-      "   Elementary Expenses (SAR)     Goal  Number of Children Employment_Status  \\\n",
-      "0                   14121.45  Savings                   1           Student   \n",
-      "1                    3174.57  Savings                   0           Student   \n",
-      "2                    6393.58  Savings                   3        Unemployed   \n",
-      "3                    3451.12  Savings                   0        Unemployed   \n",
-      "4                     667.08  Savings                   0          Employed   \n",
+      "   Elementary Expenses (SAR)        Goal  Number of Children  \\\n",
+      "0                    2694.39     Savings                   0   \n",
+      "1                    3443.47     Savings                   0   \n",
+      "2                    9626.48  Investment                   4   \n",
+      "3                    3672.84  Investment                   0   \n",
+      "4                    1228.54     Savings                   0   \n",
       "\n",
-      "  Nationality Budgeting_Rule Financial_Comfortability Goal_Progress  \n",
-      "0       Saudi       50/30/20                  ['yes']            no  \n",
-      "1       Saudi       50/30/20                  ['yes']           yes  \n",
-      "2       Saudi       50/30/20                  ['yes']            no  \n",
-      "3       Saudi       50/30/20                  ['yes']            no  \n",
-      "4       Saudi       70/20/10                  ['yes']           yes  \n",
+      "  Employment_Status Nationality Budgeting_Rule Financial_Comfortability  \\\n",
+      "0           Student       Saudi       70/20/10                  ['yes']   \n",
+      "1           Student       Saudi       50/30/20                  ['yes']   \n",
+      "2        Unemployed       Saudi       50/30/20                  ['yes']   \n",
+      "3           Student       Saudi       50/30/20                   ['no']   \n",
+      "4           Student       Saudi       60/20/20                   ['no']   \n",
+      "\n",
+      "  Goal_Progress  \n",
+      "0           yes  \n",
+      "1           yes  \n",
+      "2           yes  \n",
+      "3           yes  \n",
+      "4           yes  \n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 1176 entries, 0 to 1175\n",
       "Data columns (total 14 columns):\n",
@@ -115,32 +122,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          name  salary_(sar)  age    state     sex  monthly_debt_(sar)  \\\n",
-      "1170     tariq         28942   36  Married  Female             2034.19   \n",
-      "1171  Khadijah         15446   24   Single    Male             1457.07   \n",
-      "1173     osamh          3011   20   Single  Female              617.84   \n",
-      "1174  Khadijah         19058   20   Single    Male             5275.05   \n",
-      "1175    sultan         26038   58  Married    Male             6646.54   \n",
+      "       name  salary_(sar)  age    state     sex  monthly_debt_(sar)  \\\n",
+      "1170  turki          1924   30  Married    Male              339.17   \n",
+      "1171  ahmed          3679   19   Single  Female              400.72   \n",
+      "1173  Noura          2749   35   Single    Male              451.26   \n",
+      "1174  ziyad          7516   34  Married    Male              616.58   \n",
+      "1175  Fahad         26217   34   Single    Male             1380.83   \n",
       "\n",
       "      elementary_expenses_(sar)        goal  number_of_children  \\\n",
-      "1170                    6530.04  Investment                   1   \n",
-      "1171                     511.71  Investment                   0   \n",
-      "1173                    1427.96  Investment                   0   \n",
-      "1174                    3602.68     Savings                   0   \n",
-      "1175                   10331.68  Investment                   5   \n",
+      "1170                    4811.47  Investment                   2   \n",
+      "1171                    2903.78     Savings                   0   \n",
+      "1173                    4993.05     Savings                   0   \n",
+      "1174                    4535.88     Savings                   3   \n",
+      "1175                    1917.85     Savings                   0   \n",
       "\n",
       "     employment_status budgeting_rule  \n",
-      "1170          Employed       50/30/20  \n",
-      "1171          Employed       50/30/20  \n",
-      "1173           Student       60/20/20  \n",
-      "1174          Employed       50/30/20  \n",
+      "1170           Student       50/30/20  \n",
+      "1171           Student       70/20/10  \n",
+      "1173        Unemployed       50/30/20  \n",
+      "1174          Employed       70/20/10  \n",
       "1175          Employed       50/30/20  \n"
      ]
     },
@@ -200,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [
     {
@@ -322,83 +329,83 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>745.000000</td>\n",
-       "      <td>745.000000</td>\n",
-       "      <td>745.000000</td>\n",
-       "      <td>745.000000</td>\n",
-       "      <td>745.000000</td>\n",
-       "      <td>745.000000</td>\n",
-       "      <td>745.000000</td>\n",
+       "      <td>739.000000</td>\n",
+       "      <td>739.000000</td>\n",
+       "      <td>739.000000</td>\n",
+       "      <td>739.000000</td>\n",
+       "      <td>739.000000</td>\n",
+       "      <td>739.000000</td>\n",
+       "      <td>739.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>4051.404027</td>\n",
-       "      <td>506.025584</td>\n",
-       "      <td>5525.033691</td>\n",
-       "      <td>1.194631</td>\n",
-       "      <td>1.326174</td>\n",
-       "      <td>0.151673</td>\n",
-       "      <td>2.274469</td>\n",
+       "      <td>4058.557510</td>\n",
+       "      <td>476.217118</td>\n",
+       "      <td>5656.033329</td>\n",
+       "      <td>1.309878</td>\n",
+       "      <td>1.300406</td>\n",
+       "      <td>0.148333</td>\n",
+       "      <td>2.396972</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>3829.980334</td>\n",
-       "      <td>399.872256</td>\n",
-       "      <td>3555.717335</td>\n",
-       "      <td>1.714415</td>\n",
-       "      <td>1.281454</td>\n",
-       "      <td>0.082497</td>\n",
-       "      <td>2.247365</td>\n",
+       "      <td>4198.683241</td>\n",
+       "      <td>376.510113</td>\n",
+       "      <td>3442.699599</td>\n",
+       "      <td>1.789777</td>\n",
+       "      <td>1.244669</td>\n",
+       "      <td>0.081060</td>\n",
+       "      <td>2.208780</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
        "      <td>904.000000</td>\n",
-       "      <td>50.100000</td>\n",
-       "      <td>467.560000</td>\n",
+       "      <td>50.600000</td>\n",
+       "      <td>419.510000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.003592</td>\n",
-       "      <td>0.033129</td>\n",
+       "      <td>0.002883</td>\n",
+       "      <td>0.048809</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>1791.000000</td>\n",
-       "      <td>213.470000</td>\n",
-       "      <td>2827.240000</td>\n",
+       "      <td>1763.000000</td>\n",
+       "      <td>198.035000</td>\n",
+       "      <td>3048.495000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.078473</td>\n",
-       "      <td>0.761463</td>\n",
+       "      <td>0.078898</td>\n",
+       "      <td>0.798022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>2733.000000</td>\n",
-       "      <td>388.860000</td>\n",
-       "      <td>4663.130000</td>\n",
+       "      <td>2521.000000</td>\n",
+       "      <td>365.980000</td>\n",
+       "      <td>4789.630000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.149955</td>\n",
-       "      <td>1.597965</td>\n",
+       "      <td>0.141615</td>\n",
+       "      <td>1.793381</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>4427.000000</td>\n",
-       "      <td>679.020000</td>\n",
-       "      <td>7947.840000</td>\n",
+       "      <td>4139.500000</td>\n",
+       "      <td>634.240000</td>\n",
+       "      <td>8273.735000</td>\n",
+       "      <td>3.000000</td>\n",
        "      <td>2.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>0.225090</td>\n",
-       "      <td>3.007356</td>\n",
+       "      <td>0.215983</td>\n",
+       "      <td>3.281426</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>20214.000000</td>\n",
-       "      <td>1887.210000</td>\n",
-       "      <td>14839.350000</td>\n",
+       "      <td>22608.000000</td>\n",
+       "      <td>1803.120000</td>\n",
+       "      <td>15038.910000</td>\n",
        "      <td>5.000000</td>\n",
        "      <td>4.000000</td>\n",
-       "      <td>0.299707</td>\n",
-       "      <td>15.361976</td>\n",
+       "      <td>0.299766</td>\n",
+       "      <td>13.914766</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -406,37 +413,37 @@
       ],
       "text/plain": [
        "       salary_(sar)  monthly_debt_(sar)  elementary_expenses_(sar)  \\\n",
-       "count    745.000000          745.000000                 745.000000   \n",
-       "mean    4051.404027          506.025584                5525.033691   \n",
-       "std     3829.980334          399.872256                3555.717335   \n",
-       "min      904.000000           50.100000                 467.560000   \n",
-       "25%     1791.000000          213.470000                2827.240000   \n",
-       "50%     2733.000000          388.860000                4663.130000   \n",
-       "75%     4427.000000          679.020000                7947.840000   \n",
-       "max    20214.000000         1887.210000               14839.350000   \n",
+       "count    739.000000          739.000000                 739.000000   \n",
+       "mean    4058.557510          476.217118                5656.033329   \n",
+       "std     4198.683241          376.510113                3442.699599   \n",
+       "min      904.000000           50.600000                 419.510000   \n",
+       "25%     1763.000000          198.035000                3048.495000   \n",
+       "50%     2521.000000          365.980000                4789.630000   \n",
+       "75%     4139.500000          634.240000                8273.735000   \n",
+       "max    22608.000000         1803.120000               15038.910000   \n",
        "\n",
        "       number_of_children  age_group_encoded  debt_to_income_ratio  \\\n",
-       "count          745.000000         745.000000            745.000000   \n",
-       "mean             1.194631           1.326174              0.151673   \n",
-       "std              1.714415           1.281454              0.082497   \n",
-       "min              0.000000           0.000000              0.003592   \n",
-       "25%              0.000000           0.000000              0.078473   \n",
-       "50%              0.000000           1.000000              0.149955   \n",
-       "75%              2.000000           2.000000              0.225090   \n",
-       "max              5.000000           4.000000              0.299707   \n",
+       "count          739.000000         739.000000            739.000000   \n",
+       "mean             1.309878           1.300406              0.148333   \n",
+       "std              1.789777           1.244669              0.081060   \n",
+       "min              0.000000           0.000000              0.002883   \n",
+       "25%              0.000000           0.000000              0.078898   \n",
+       "50%              0.000000           1.000000              0.141615   \n",
+       "75%              3.000000           2.000000              0.215983   \n",
+       "max              5.000000           4.000000              0.299766   \n",
        "\n",
        "       savings_ratio  \n",
-       "count     745.000000  \n",
-       "mean        2.274469  \n",
-       "std         2.247365  \n",
-       "min         0.033129  \n",
-       "25%         0.761463  \n",
-       "50%         1.597965  \n",
-       "75%         3.007356  \n",
-       "max        15.361976  "
+       "count     739.000000  \n",
+       "mean        2.396972  \n",
+       "std         2.208780  \n",
+       "min         0.048809  \n",
+       "25%         0.798022  \n",
+       "50%         1.793381  \n",
+       "75%         3.281426  \n",
+       "max        13.914766  "
       ]
      },
-     "execution_count": 387,
+     "execution_count": 394,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [],
    "source": [
