--- a/data_genration.ipynb
+++ b/data_genration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,28 +40,29 @@
     "        \"60/20/20\": {\"spending\": 0.60, \"saving\": 0.20, \"investment\": 0.20},\n",
     "    }\n",
     "\n",
-    "    # Evaluate the best rule based on the goal\n",
-    "    if goal == \"Savings\":\n",
-    "        # Choose the rule with the highest saving percentage, with some randomness\n",
-    "        primary_rule = max(rules.keys(), key=lambda rule: rules[rule][\"saving\"])\n",
-    "        secondary_rule = random.choice([rule for rule in rules if rule != primary_rule])\n",
-    "    elif goal == \"Investment\":\n",
-    "        # Choose the rule with the highest investment percentage, with some randomness\n",
-    "        primary_rule = max(rules.keys(), key=lambda rule: rules[rule][\"investment\"])\n",
-    "        secondary_rule = random.choice([rule for rule in rules if rule != primary_rule])\n",
-    "    else:\n",
-    "        # Default to the rule with the highest spending percentage, with some randomness\n",
-    "        primary_rule = max(rules.keys(), key=lambda rule: rules[rule][\"spending\"])\n",
-    "        secondary_rule = random.choice([rule for rule in rules if rule != primary_rule])\n",
+    "    # Assign weights for each rule based on the financial goal\n",
+    "    weights = {\n",
+    "        \"Savings\": {\"50/30/20\": 0.6, \"60/20/20\": 0.3, \"70/20/10\": 0.1},\n",
+    "        \"Investment\": {\"60/20/20\": 0.8, \"50/30/20\": 0.1, \"70/20/10\": 0.1},\n",
+    "        \"Spending\": {\"70/20/10\": 0.5, \"60/20/20\": 0.3, \"50/30/20\": 0.2},\n",
+    "    }\n",
     "\n",
-    "    # Decide whether to pick the primary rule or the secondary rule with a small random chance\n",
-    "    selected_rule = primary_rule if random.random() > 0.50 else secondary_rule  # 80% primary, 20% secondary\n",
+    "    # Select weights based on the goal\n",
+    "    rule_weights = weights.get(goal, {\"50/30/20\": 0.4, \"70/20/10\": 0.4, \"60/20/20\": 0.2})\n",
+    "\n",
+    "    # Randomly pick a rule based on the weights\n",
+    "    selected_rule = random.choices(\n",
+    "        population=list(rule_weights.keys()),\n",
+    "        weights=list(rule_weights.values()),\n",
+    "        k=1\n",
+    "    )[0]\n",
     "\n",
     "    # Ensure the selected rule can accommodate the individual's expenses\n",
     "    spending_limit = rules[selected_rule][\"spending\"] * salary\n",
     "    if elementary_expenses > spending_limit:\n",
     "        # If elementary expenses exceed the spending limit of the selected rule, default to \"70/20/10\"\n",
     "        return \"70/20/10\"  # Higher spending percentage\n",
+    "\n",
     "    return selected_rule\n",
     "\n",
     "# Function to generate random data for each column\n",
