Updating model.html

--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,40 +28,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    Name  Salary (SAR)  Age    State     Sex  Monthly Debt (SAR)  \\\n",
-      "0   saif          4833   23   Single  Female               83.88   \n",
-      "1  Aisha          3894   23   Single    Male              491.46   \n",
-      "2   Nada          2355   55  Married    Male              667.27   \n",
-      "3    Ali          3521   21   Single  Female              370.20   \n",
-      "4   Mona          3068   25   Single    Male              434.68   \n",
+      "     Name  Salary (SAR)  Age    State     Sex  Monthly Debt (SAR)  \\\n",
+      "0   Ahmed          1332   52   Single  Female              226.42   \n",
+      "1    Naif          2240   51  Married    Male              113.76   \n",
+      "2   salem          2467   22  Married    Male              376.84   \n",
+      "3    Hind          2067   32  Married  Female              187.67   \n",
+      "4  Sultan          1917   60   Single  Female              302.62   \n",
       "\n",
       "   Elementary Expenses (SAR)        Goal  Number of Children  \\\n",
-      "0                    2694.39     Savings                   0   \n",
-      "1                    3443.47     Savings                   0   \n",
-      "2                    9626.48  Investment                   4   \n",
-      "3                    3672.84  Investment                   0   \n",
-      "4                    1228.54     Savings                   0   \n",
+      "0                    2971.24     Savings                   0   \n",
+      "1                    3369.83     Savings                   2   \n",
+      "2                    7357.43    Spending                   1   \n",
+      "3                    3762.59  Investment                   5   \n",
+      "4                    3424.54    Spending                   0   \n",
       "\n",
       "  Employment_Status Nationality Budgeting_Rule Financial_Comfortability  \\\n",
-      "0           Student       Saudi       70/20/10                  ['yes']   \n",
-      "1           Student       Saudi       50/30/20                  ['yes']   \n",
+      "0        Unemployed       Saudi       50/30/20                  ['yes']   \n",
+      "1        Unemployed       Saudi       50/30/20                  ['yes']   \n",
       "2        Unemployed       Saudi       50/30/20                  ['yes']   \n",
-      "3           Student       Saudi       50/30/20                   ['no']   \n",
-      "4           Student       Saudi       60/20/20                   ['no']   \n",
+      "3        Unemployed       Saudi       50/30/20                  ['yes']   \n",
+      "4        Unemployed       Saudi       50/30/20                  ['yes']   \n",
       "\n",
       "  Goal_Progress  \n",
       "0           yes  \n",
       "1           yes  \n",
       "2           yes  \n",
-      "3           yes  \n",
-      "4           yes  \n",
+      "3            no  \n",
+      "4            no  \n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 1176 entries, 0 to 1175\n",
       "Data columns (total 14 columns):\n",
@@ -122,33 +122,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       name  salary_(sar)  age    state     sex  monthly_debt_(sar)  \\\n",
-      "1170  turki          1924   30  Married    Male              339.17   \n",
-      "1171  ahmed          3679   19   Single  Female              400.72   \n",
-      "1173  Noura          2749   35   Single    Male              451.26   \n",
-      "1174  ziyad          7516   34  Married    Male              616.58   \n",
-      "1175  Fahad         26217   34   Single    Male             1380.83   \n",
+      "          name  salary_(sar)  age    state     sex  monthly_debt_(sar)  \\\n",
+      "1170     bader          2007   28   Single    Male              236.13   \n",
+      "1172    Mugbil          2487   23   Single  Female              738.15   \n",
+      "1173  Khadijah          2994   44  Married    Male              572.44   \n",
+      "1174    Samira          2342   22  Married  Female              179.76   \n",
+      "1175    Salman          1215   27  Married    Male              203.54   \n",
       "\n",
       "      elementary_expenses_(sar)        goal  number_of_children  \\\n",
-      "1170                    4811.47  Investment                   2   \n",
-      "1171                    2903.78     Savings                   0   \n",
-      "1173                    4993.05     Savings                   0   \n",
-      "1174                    4535.88     Savings                   3   \n",
-      "1175                    1917.85     Savings                   0   \n",
+      "1170                    3234.27    Spending                   0   \n",
+      "1172                    4716.37    Spending                   0   \n",
+      "1173                   10603.21    Spending                   1   \n",
+      "1174                    8050.24    Spending                   0   \n",
+      "1175                    5343.83  Investment                   1   \n",
       "\n",
       "     employment_status budgeting_rule  \n",
       "1170           Student       50/30/20  \n",
-      "1171           Student       70/20/10  \n",
+      "1172           Student       50/30/20  \n",
       "1173        Unemployed       50/30/20  \n",
-      "1174          Employed       70/20/10  \n",
-      "1175          Employed       50/30/20  \n"
+      "1174        Unemployed       50/30/20  \n",
+      "1175           Student       50/30/20  \n"
      ]
     },
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [
     {
@@ -321,6 +321,13 @@
        "      <th>monthly_debt_(sar)</th>\n",
        "      <th>elementary_expenses_(sar)</th>\n",
        "      <th>number_of_children</th>\n",
+       "      <th>budgeting_rule</th>\n",
+       "      <th>state_Single</th>\n",
+       "      <th>sex_Male</th>\n",
+       "      <th>goal_Savings</th>\n",
+       "      <th>goal_Spending</th>\n",
+       "      <th>employment_status_Student</th>\n",
+       "      <th>employment_status_Unemployed</th>\n",
        "      <th>age_group_encoded</th>\n",
        "      <th>debt_to_income_ratio</th>\n",
        "      <th>savings_ratio</th>\n",
@@ -328,122 +335,125 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>739.000000</td>\n",
-       "      <td>739.000000</td>\n",
-       "      <td>739.000000</td>\n",
-       "      <td>739.000000</td>\n",
-       "      <td>739.000000</td>\n",
-       "      <td>739.000000</td>\n",
-       "      <td>739.000000</td>\n",
+       "      <th>0</th>\n",
+       "      <td>1332</td>\n",
+       "      <td>226.42</td>\n",
+       "      <td>2971.24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50/30/20</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.169985</td>\n",
+       "      <td>2.230661</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>4058.557510</td>\n",
-       "      <td>476.217118</td>\n",
-       "      <td>5656.033329</td>\n",
-       "      <td>1.309878</td>\n",
-       "      <td>1.300406</td>\n",
-       "      <td>0.148333</td>\n",
-       "      <td>2.396972</td>\n",
+       "      <th>1</th>\n",
+       "      <td>2240</td>\n",
+       "      <td>113.76</td>\n",
+       "      <td>3369.83</td>\n",
+       "      <td>2</td>\n",
+       "      <td>50/30/20</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.050786</td>\n",
+       "      <td>1.504388</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>4198.683241</td>\n",
-       "      <td>376.510113</td>\n",
-       "      <td>3442.699599</td>\n",
-       "      <td>1.789777</td>\n",
-       "      <td>1.244669</td>\n",
-       "      <td>0.081060</td>\n",
-       "      <td>2.208780</td>\n",
+       "      <th>2</th>\n",
+       "      <td>2467</td>\n",
+       "      <td>376.84</td>\n",
+       "      <td>7357.43</td>\n",
+       "      <td>1</td>\n",
+       "      <td>50/30/20</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.152752</td>\n",
+       "      <td>2.982339</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>904.000000</td>\n",
-       "      <td>50.600000</td>\n",
-       "      <td>419.510000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.002883</td>\n",
-       "      <td>0.048809</td>\n",
+       "      <th>5</th>\n",
+       "      <td>2318</td>\n",
+       "      <td>556.81</td>\n",
+       "      <td>5503.34</td>\n",
+       "      <td>3</td>\n",
+       "      <td>50/30/20</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.240211</td>\n",
+       "      <td>2.374176</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>1763.000000</td>\n",
-       "      <td>198.035000</td>\n",
-       "      <td>3048.495000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.078898</td>\n",
-       "      <td>0.798022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>2521.000000</td>\n",
-       "      <td>365.980000</td>\n",
-       "      <td>4789.630000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.141615</td>\n",
-       "      <td>1.793381</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>4139.500000</td>\n",
-       "      <td>634.240000</td>\n",
-       "      <td>8273.735000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>0.215983</td>\n",
-       "      <td>3.281426</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>22608.000000</td>\n",
-       "      <td>1803.120000</td>\n",
-       "      <td>15038.910000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>0.299766</td>\n",
-       "      <td>13.914766</td>\n",
+       "      <th>6</th>\n",
+       "      <td>2572</td>\n",
+       "      <td>629.61</td>\n",
+       "      <td>7032.60</td>\n",
+       "      <td>5</td>\n",
+       "      <td>50/30/20</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.244794</td>\n",
+       "      <td>2.734292</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       salary_(sar)  monthly_debt_(sar)  elementary_expenses_(sar)  \\\n",
-       "count    739.000000          739.000000                 739.000000   \n",
-       "mean    4058.557510          476.217118                5656.033329   \n",
-       "std     4198.683241          376.510113                3442.699599   \n",
-       "min      904.000000           50.600000                 419.510000   \n",
-       "25%     1763.000000          198.035000                3048.495000   \n",
-       "50%     2521.000000          365.980000                4789.630000   \n",
-       "75%     4139.500000          634.240000                8273.735000   \n",
-       "max    22608.000000         1803.120000               15038.910000   \n",
+       "   salary_(sar)  monthly_debt_(sar)  elementary_expenses_(sar)  \\\n",
+       "0          1332              226.42                    2971.24   \n",
+       "1          2240              113.76                    3369.83   \n",
+       "2          2467              376.84                    7357.43   \n",
+       "5          2318              556.81                    5503.34   \n",
+       "6          2572              629.61                    7032.60   \n",
        "\n",
-       "       number_of_children  age_group_encoded  debt_to_income_ratio  \\\n",
-       "count          739.000000         739.000000            739.000000   \n",
-       "mean             1.309878           1.300406              0.148333   \n",
-       "std              1.789777           1.244669              0.081060   \n",
-       "min              0.000000           0.000000              0.002883   \n",
-       "25%              0.000000           0.000000              0.078898   \n",
-       "50%              0.000000           1.000000              0.141615   \n",
-       "75%              3.000000           2.000000              0.215983   \n",
-       "max              5.000000           4.000000              0.299766   \n",
+       "   number_of_children budgeting_rule  state_Single  sex_Male  goal_Savings  \\\n",
+       "0                   0       50/30/20          True     False          True   \n",
+       "1                   2       50/30/20         False      True          True   \n",
+       "2                   1       50/30/20         False      True         False   \n",
+       "5                   3       50/30/20         False      True         False   \n",
+       "6                   5       50/30/20         False     False         False   \n",
        "\n",
-       "       savings_ratio  \n",
-       "count     739.000000  \n",
-       "mean        2.396972  \n",
-       "std         2.208780  \n",
-       "min         0.048809  \n",
-       "25%         0.798022  \n",
-       "50%         1.793381  \n",
-       "75%         3.281426  \n",
-       "max        13.914766  "
+       "   goal_Spending  employment_status_Student  employment_status_Unemployed  \\\n",
+       "0          False                      False                          True   \n",
+       "1          False                      False                          True   \n",
+       "2           True                      False                          True   \n",
+       "5          False                      False                          True   \n",
+       "6          False                      False                          True   \n",
+       "\n",
+       "   age_group_encoded  debt_to_income_ratio  savings_ratio  \n",
+       "0                  3              0.169985       2.230661  \n",
+       "1                  3              0.050786       1.504388  \n",
+       "2                  0              0.152752       2.982339  \n",
+       "5                  3              0.240211       2.374176  \n",
+       "6                  0              0.244794       2.734292  "
       ]
      },
-     "execution_count": 394,
+     "execution_count": 415,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +470,8 @@
     "# Drop irrelevant columns\n",
     "data = data.drop(columns=['name'])\n",
     "\n",
-    "data.describe()"
+    "data.describe()\n",
+    "data.head()"
    ]
   },
   {
@@ -472,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [],
    "source": [
