--- a/data_genration.ipynb
+++ b/data_genration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
     "]\n",
     "states = [\"Single\", \"Married\"]\n",
     "sexes = [\"Male\", \"Female\"]\n",
-    "goals = [\"Savings\", \"Investment\"]\n",
+    "goals = [\"Savings\", \"Investment\",\"Spending\"]\n",
     "employment_statuses = [\"Employed\", \"Unemployed\", \"Student\"]\n",
     "budgeting_rules = [\"50/30/20\", \"70/20/10\", \"60/20/20\"]  # Spending/Saving/Investment percentages\n",
     "\n",
@@ -80,7 +80,7 @@
     "    \n",
     "    # Generate salary based on age and employment status\n",
     "    if employment_status == \"Employed\":\n",
-    "        salary = random.randint(5000, 35000) if age > 30 else random.randint(3000, 20000)\n",
+    "        salary = random.randint(5000, 35000) if age > 30 else random.randint(3000, 25000)\n",
     "    elif employment_status == \"Student\":\n",
     "        salary = random.randint(900, 5000)\n",
     "    elif employment_status == \"Unemployed\":\n",
